# leetui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.claude/: settings.local.json
src/: app.rs  config.rs  event.rs  main.rs
src/api/: client.rs  mod.rs  queries.rs  types.rs
src/scaffold/: go.rs  mod.rs  rust.rs
src/ui/: browser.rs  detail.rs  home.rs  mod.rs  setup.rs  status_bar.rs
