[package]
name = "leetcode-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
reqwest = { version = "0.13", features = ["json", "cookies"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
html2text = "0.16"
anyhow = "1"
futures = "0.3"
