[package]
name = "leetui"
version = "0.1.1"
edition = "2024"
description = "A terminal-based interface for browsing, solving, and submitting LeetCode problems"
license = "MIT"
repository = "https://github.com/yottaes/leetui"
keywords = ["leetcode", "tui", "terminal", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "leetui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
reqwest = { version = "0.13", features = ["json", "cookies"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
html2text = "0.16"
anyhow = "1"
futures = "0.3"
rookie = "0.5.6"
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
